--- a/Phase - 1/java-fx/java-fx-fundamentals/student-database-2/src/main/resources/view/MainForm.fxml
+++ b/Phase - 1/java-fx/java-fx-fundamentals/student-database-2/src/main/resources/view/MainForm.fxml
@@ -12,7 +12,7 @@
 
 <AnchorPane prefHeight="688.0" prefWidth="818.0" stylesheets="@../css/MainFormStyles.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.dep10.student_database.controller.MainFormController">
    <children>
-      <Button fx:id="btnNewStudent" layoutX="30.0" layoutY="20.0" mnemonicParsing="false" onAction="#btnNewStudentOnActon" text="New Student +" />
+      <Button fx:id="btnNewStudent" layoutX="30.0" layoutY="20.0" mnemonicParsing="false" onAction="#btnNewStudentOnActon" text="+ New Student" />
       <HBox alignment="CENTER_LEFT" layoutX="41.0" layoutY="65.0" maxWidth="1.7976931348623157E308" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="150.0">
          <children>
             <Label maxWidth="1.7976931348623157E308" prefWidth="120.0" text="Student ID" />
