Customer database app

--- a/Phase - 1/java-fx/java-fx-fundamentals/java-fx-last/src/main/resources/css/ListViewExerciseStyles.css
+++ b/Phase - 1/java-fx/java-fx-fundamentals/java-fx-last/src/main/resources/css/ListViewExerciseStyles.css
@@ -9,6 +9,9 @@
     -fx-font-weight: bold;
     -fx-text-fill: white;
 }
+#btnForward, #btnBack {
+    -fx-text-fill: black;
+}
 
 #btnNewStudent {
     -fx-background-color: blue;
